--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     Hello World!!
-    <a href="./src/docs/Module 1/Chapter 1/module-recap.html">a</a>
+    <a
+      href="./src/docs/Module 1/Chapter 1/module-recap.html"
+      style="display: none"
+      >a</a
+    >
   </body>
 </html>
