--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hehe</title>
+    <style>
+      a {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    Hello World!!
-    <a
-      href="./src/docs/Module 1/Chapter 1/module-recap.html"
-      style="display: none"
-      >a</a
-    >
+    Hehe!!
+    <a href="./src/docs/m2/c4/l0/l0.html">bootcamp-wd-m2-c4-l0</a>
   </body>
 </html>
