Some CSS Changes

--- a/index.html
+++ b/index.html
@@ -15,3 +15,7 @@
     <a href="./src/docs/m2/c4/l0/l0.html">bootcamp-wd-m2-c4-l0</a>
   </body>
 </html>
+
+<!-- Remove custom css and add <link rel="stylesheet" href="../../../../../styles.css"> -->
+<!-- Make <details open=""> to <details close="">-->
+<!-- Remove <a></a> tags before the image. -->
