--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     Hehe!!
+    <a href="./src/docs/m1/c1/l2/l2.html">bootcamp-wd-m1-c1-l2</a>
+
     <a href="./src/docs/m2/c4/l0/l0.html">bootcamp-wd-m2-c4-l0</a>
   </body>
 </html>
